Add AWS SES support for email notifications and update environment variables

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,9 @@ JWT_SECRET=your_jwt_secret
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
 WAITLIST_EMAIL=recipient@example.com
+
+# New variables for AWS SES
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=your_aws_region           
+EMAIL_SERVICE=ses                    # Toggle: "nodemailer" or "ses"
