Add payment processing features with Stripe integration

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,6 @@ AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region           
 EMAIL_SERVICE=ses                    # Toggle: "nodemailer" or "ses"
+
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+STRIPE_SECRET_KEY=your_stripe_secret_key
