--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.7.0",
     "@tailwindcss/vite": "^4.0.8",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
