--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "stripe": "^17.7.0"
   }
 }
