--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^3.3.0",
     "@stripe/stripe-js": "^5.9.2",
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.2",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
