--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "regenerator-runtime": "^0.14.1"
   },
