updated env example

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,7 @@ EMAIL_SERVICE=ses                    # Toggle: "nodemailer" or "ses"
 
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 STRIPE_SECRET_KEY=your_stripe_secret_key
+
+# Admin Credentials
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=password
