--- a/server/.env.example
+++ b/server/.env.example
@@ -17,3 +17,8 @@ STRIPE_SECRET_KEY=your_stripe_secret_key
 # Admin Credentials
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=password
+
+# Cloudinary Credentials
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
