:memo: remove cloudinary dependencies and update readme

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,6 +11,9 @@ AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region           
 EMAIL_SERVICE=ses                    # Toggle: "nodemailer" or "ses"
 
+AWS_S3_BUCKET_NAME=your-bucket-name
+AWS_S3_BUCKET_URL=https://<your-bucket-name.s3>.<region>.amazonaws.com
+
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 STRIPE_SECRET_KEY=your_stripe_secret_key
 
