:heavy_plus_sign: update .gitignore and environment files; adjust API base URL and MongoDB connection

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
-/server/.env.example
+# Dependencies
+node_modules/
+/.pnp
+.pnp.js
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+/client/dist
+/client/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# Testing
+/coverage
+.nyc_output
+
+# Production
+/build
+/dist
+
+# Misc
+.cache/
+.temp/
+.tmp/
