--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,358 @@
-name: Push & Deploy
+name: Build, Push and Deploy to EC2
+
 on:
   push:
-    branches:
-      - "main"
+    branches: [ main ]
+
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
+      
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build server and push
-        uses: docker/build-push-action@v6
-        with:
-          context: ./server
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/server:latest
-          platforms: linux/amd64
       
-      - name: Build client and push
-        uses: docker/build-push-action@v6
+      - name: Determine API URL
+        id: api-url
+        run: |
+          if [ -n "${{ secrets.DOMAIN_NAME }}" ]; then
+            echo "API_URL=https://${{ secrets.DOMAIN_NAME }}/api" >> $GITHUB_OUTPUT
+          else
+            echo "API_URL=http://${{ secrets.AWS_EC2_HOST }}/api" >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Build and push Frontend
+        uses: docker/build-push-action@v4
         with:
           context: ./client
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/client:latest
-          platforms: linux/amd64
+          tags: ${{ secrets.DOCKER_USERNAME }}/elitespan-frontend:latest
           build-args: |
-            VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}
-            VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
+            VITE_API_URL=${{ steps.api-url.outputs.API_URL }}
+      
+      - name: Build and push Backend
+        uses: docker/build-push-action@v4
+        with:
+          context: ./server
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/elitespan-backend:latest
 
   deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
-    needs: docker
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Deploy
-        uses: appleboy/ssh-action@master
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.7.0
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker-compose down && docker-compose pull && docker-compose up -d
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      
+      - name: Add server to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      
+      - name: Deploy to EC2
+        run: |
+          # Create deployment script on EC2
+          ssh ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
+          # Create app directory if it doesn't exist
+          mkdir -p ~/app
+          mkdir -p ~/app/nginx
+          
+          # Determine if we're using a custom domain or EC2 public DNS
+          USING_CUSTOM_DOMAIN="${{ secrets.DOMAIN_NAME != '' }}"
+          SITE_URL="${{ secrets.DOMAIN_NAME }}"
+          if [ "$USING_CUSTOM_DOMAIN" != "true" ]; then
+            SITE_URL="${{ secrets.EC2_HOST }}"
+            echo "Using EC2 public DNS: $SITE_URL"
+          else
+            echo "Using custom domain: $SITE_URL"
+            # Create directories for SSL certificates
+            mkdir -p ~/app/certbot/conf
+            mkdir -p ~/app/certbot/www
+          fi
+          
+          # Create docker-compose file
+          cat > ~/app/docker-compose.yml << 'EOL'
+          services:
+            nginx:
+              image: nginx:alpine
+              ports:
+                - "80:80"
+          EOL
+          
+          # Add SSL ports if using custom domain
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - "443:443"
+          EOL
+          fi
+          
+          cat >> ~/app/docker-compose.yml << 'EOL'
+              restart: always
+              volumes:
+                - ./nginx:/etc/nginx/conf.d
+          EOL
+          
+          # Add SSL volumes if using custom domain
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - ./certbot/conf:/etc/letsencrypt
+                - ./certbot/www:/var/www/certbot
+          EOL
+          fi
+          
+          cat >> ~/app/docker-compose.yml << 'EOL'
+              depends_on:
+                - frontend
+                - backend
+            
+            frontend:
+              image: ${{ secrets.DOCKER_USERNAME }}/elitespan-frontend:latest
+              restart: always
+              environment:
+                - NODE_ENV=production
+                - VITE_BASE_URL=https://${{ secrets.DOMAIN_NAME }}
+                - VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.STRIPE_PUBLISHABLE_KEY }}
+          EOL
+          
+          # Set the correct API URL based on domain availability
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - VITE_API_URL=https://${{ secrets.DOMAIN_NAME }}/api
+          EOL
+          else
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - VITE_API_URL=http://${{ secrets.EC2_HOST }}/api
+          EOL
+          fi
+          
+          cat >> ~/app/docker-compose.yml << 'EOL'
+              depends_on:
+                - backend
+            
+            backend:
+              image: ${{ secrets.DOCKER_USERNAME }}/elitespan-backend:latest
+              restart: always
+              environment:
+                - MONGO_URI=${MONGO_URI}
+                - JWT_SECRET=${JWT_SECRET}
+                - EMAIL_USER=${EMAIL_USER}
+                - EMAIL_PASS=${EMAIL_PASS}
+                - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+                - FROM_EMAIL=${FROM_EMAIL}
+                - WAITLIST_EMAIL=${WAITLIST_EMAIL}
+                - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+                - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+                - AWS_REGION=${AWS_REGION}
+                - EMAIL_SERVICE=${EMAIL_SERVICE}
+                - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+                - AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL}
+                - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+                - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+                - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
+                - ADMIN_EMAIL=${ADMIN_EMAIL}
+                - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+          EOL
+          
+          # Set the correct frontend URL
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - FRONTEND_URL=https://${{ secrets.DOMAIN_NAME }}
+          EOL
+          else
+            cat >> ~/app/docker-compose.yml << 'EOL'
+                - FRONTEND_URL=http://${{ secrets.AWS_EC2_HOST }}
+          EOL
+          fi
+      
+          # Add certbot service if using custom domain
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/docker-compose.yml << 'EOL'
+          
+            certbot:
+              image: certbot/certbot
+              volumes:
+                - ./certbot/conf:/etc/letsencrypt
+                - ./certbot/www:/var/www/certbot
+              entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+          EOL
+          fi
+          
+          cat >> ~/app/docker-compose.yml << 'EOL'
+          
+          networks:
+            default:
+              name: school-network
+          EOL
+          
+          # Create env file
+          cat > ~/app/.env << 'EOL'
+          PORT=3000
+          MONGO_URI=${{ secrets.MONGO_URI }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          EMAIL_USER=${{ secrets.EMAIL_USER }}
+          EMAIL_PASS=${{ secrets.EMAIL_PASS }}
+          WAITLIST_EMAIL=${{ secrets.WAITLIST_EMAIL }}
+          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION=${{ secrets.AWS_REGION }}
+          EMAIL_SERVICE=ses
+          AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }}
+          AWS_S3_BUCKET_URL=${{ secrets.AWS_S3_BUCKET_URL }}
+          STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
+          STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }}
+          STRIPE_PUBLISHABLE_KEY=${{ secrets.STRIPE_PUBLISHABLE_KEY }}
+          ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
+          ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }}
+
+          EOL
+          
+          # Set correct FRONTEND_URL in env file
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            cat >> ~/app/.env << 'EOL'
+          FRONTEND_URL=https://${{ secrets.DOMAIN_NAME }}
+          EOL
+          else
+            cat >> ~/app/.env << 'EOL'
+          FRONTEND_URL=http://${{ secrets.AWS_EC2_HOST }}
+          EOL
+          fi
+          
+          cat >> ~/app/.env << 'EOL'
+          SUPPORT_EMAIL=${{ secrets.SUPPORT_EMAIL }}
+          EOL
+          
+          # Stop any running containers
+          cd ~/app
+          docker-compose down || true
+          
+          # Handle SSL certificate setup if using custom domain
+          if [ "$USING_CUSTOM_DOMAIN" == "true" ]; then
+            # Create initial nginx config for certificate validation
+            cat > ~/app/nginx/init.conf << 'EOL'
+          server {
+              listen 80;
+              server_name ${{ secrets.DOMAIN_NAME }};
+              
+              location /.well-known/acme-challenge/ {
+                  root /var/www/certbot;
+              }
+              
+              location / {
+                  return 200 'Ready for Let\'s Encrypt validation';
+              }
+          }
+          EOL
+            
+            # Create an initial compose file just for certificate validation
+            cat > ~/app/init-compose.yml << 'EOL'
+          services:
+            nginx:
+              image: nginx:alpine
+              ports:
+                - "80:80"
+              volumes:
+                - ./nginx/init.conf:/etc/nginx/conf.d/default.conf
+                - ./certbot/www:/var/www/certbot
+          EOL
+            
+            # Start initial nginx container for certificate validation
+            docker-compose -f init-compose.yml up -d
+            
+            # Wait for nginx to start
+            sleep 5
+            
+            # Obtain the certificate
+            docker run --rm -v "$(pwd)/certbot/conf:/etc/letsencrypt" -v "$(pwd)/certbot/www:/var/www/certbot" \
+              certbot/certbot certonly --webroot --webroot-path=/var/www/certbot \
+              --email ${{ secrets.SUPPORT_EMAIL }} --agree-tos --no-eff-email \
+              --non-interactive --keep-until-expiring \
+              -d ${{ secrets.DOMAIN_NAME }}
+            
+            # Stop the initial nginx
+            docker-compose -f init-compose.yml down
+            
+            # Create HTTPS nginx config
+            cat > ~/app/nginx/default.conf << 'EOL'
+          server {
+              listen 80;
+              server_name ${{ secrets.DOMAIN_NAME }};
+              
+              location /.well-known/acme-challenge/ {
+                  root /var/www/certbot;
+              }
+              
+              location / {
+                  return 301 https://$host$request_uri;
+              }
+          }
+          
+          server {
+              listen 443 ssl;
+              server_name ${{ secrets.DOMAIN_NAME }};
+              
+              ssl_certificate /etc/letsencrypt/live/${{ secrets.DOMAIN_NAME }}/fullchain.pem;
+              ssl_certificate_key /etc/letsencrypt/live/${{ secrets.DOMAIN_NAME }}/privkey.pem;
+              
+              location / {
+                  proxy_pass http://frontend;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto $scheme;
+              }
+              
+              location /api/ {
+                  proxy_pass http://backend:5000/api/;
+                  proxy_http_version 1.1;
+                  proxy_set_header Upgrade $http_upgrade;
+                  proxy_set_header Connection 'upgrade';
+                  proxy_set_header Host $host;
+                  proxy_cache_bypass $http_upgrade;
+              }
+          }
+          EOL
+          else
+            # Create HTTP-only nginx config for EC2 public DNS
+            cat > ~/app/nginx/default.conf << 'EOL'
+          server {
+              listen 80;
+              
+              location / {
+                  proxy_pass http://frontend;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto $scheme;
+              }
+              
+              location /api/ {
+                  proxy_pass http://backend:5000/api/;
+                  proxy_http_version 1.1;
+                  proxy_set_header Upgrade $http_upgrade;
+                  proxy_set_header Connection 'upgrade';
+                  proxy_set_header Host $host;
+                  proxy_cache_bypass $http_upgrade;
+              }
+          }
+          EOL
+          fi
+          
+          # Log into Docker Hub
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          
+          # Pull latest images and start all containers
+          docker-compose pull
+          # Delete dangling images
+          docker rmi $(docker images -f "dangling=true" -q) || true
+          docker-compose up -d
+          EOF
