--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
           cat >> ~/app/docker-compose.yml << 'EOL'
               restart: always
               volumes:
-                - ./nginx:/etc/nginx/conf.d
+                - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
           EOL
           
           # Add SSL volumes if using custom domain
@@ -118,6 +118,8 @@ jobs:
             frontend:
               image: ${{ secrets.DOCKER_USERNAME }}/elitespan-frontend:latest
               restart: always
+              ports:
+                - "7000:80"
               environment:
                 - NODE_ENV=production
                 - VITE_BASE_URL=https://${{ secrets.DOMAIN_NAME }}
@@ -142,6 +144,8 @@ jobs:
             backend:
               image: ${{ secrets.DOCKER_USERNAME }}/elitespan-backend:latest
               restart: always
+              ports:
+                - "5000:5000"
               environment:
                 - MONGO_URI=${MONGO_URI}
                 - JWT_SECRET=${JWT_SECRET}
@@ -161,6 +165,7 @@ jobs:
                 - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
                 - ADMIN_EMAIL=${ADMIN_EMAIL}
                 - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+              
           EOL
           
           # Set the correct frontend URL
@@ -304,7 +309,7 @@ jobs:
               ssl_certificate_key /etc/letsencrypt/live/${{ secrets.DOMAIN_NAME }}/privkey.pem;
               
               location / {
-                  proxy_pass http://frontend;
+                  proxy_pass http://frontend:80;
                   proxy_set_header Host $host;
                   proxy_set_header X-Real-IP $remote_addr;
                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -312,7 +317,7 @@ jobs:
               }
               
               location /api/ {
-                  proxy_pass http://backend:5000/api/;
+                  proxy_pass http://backend:5000;
                   proxy_http_version 1.1;
                   proxy_set_header Upgrade $http_upgrade;
                   proxy_set_header Connection 'upgrade';
@@ -328,7 +333,7 @@ jobs:
               listen 80;
               
               location / {
-                  proxy_pass http://frontend;
+                  proxy_pass http://frontend:80;
                   proxy_set_header Host $host;
                   proxy_set_header X-Real-IP $remote_addr;
                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -336,7 +341,7 @@ jobs:
               }
               
               location /api/ {
-                  proxy_pass http://backend:5000/api/;
+                  proxy_pass http://backend:5000;
                   proxy_http_version 1.1;
                   proxy_set_header Upgrade $http_upgrade;
                   proxy_set_header Connection 'upgrade';
