refactor email service configuration to use SendGrid

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,12 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/doctor_directory
 JWT_SECRET=your_jwt_secret
-EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
 WAITLIST_EMAIL=recipient@example.com
+
+# sendgrid
+SENDGRID_API_KEY=Your SendGrid API key
+EMAIL_USER=your_email@gmail.com
 
 # New variables for AWS SES
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
