--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,7 +159,7 @@ jobs:
                 - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
                 - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
                 - AWS_REGION=${AWS_REGION}
-                - EMAIL_SERVICE=${EMAIL_SERVICE}
+                - EMAIL_SERVICE=sendgrid
                 - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
                 - AWS_S3_BUCKET_URL=${AWS_S3_BUCKET_URL}
                 - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
@@ -208,11 +208,12 @@ jobs:
           JWT_SECRET=${{ secrets.JWT_SECRET }}
           EMAIL_USER=${{ secrets.EMAIL_USER }}
           EMAIL_PASS=${{ secrets.EMAIL_PASS }}
+          SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
           WAITLIST_EMAIL=${{ secrets.WAITLIST_EMAIL }}
           AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION=${{ secrets.AWS_REGION }}
-          EMAIL_SERVICE=ses
+          EMAIL_SERVICE=sendgrid
           AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }}
           AWS_S3_BUCKET_URL=${{ secrets.AWS_S3_BUCKET_URL }}
           STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
