update env example

--- a/server/.env.example
+++ b/server/.env.example
@@ -12,7 +12,7 @@ EMAIL_USER=your_email@gmail.com
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region           
-EMAIL_SERVICE=ses                    # Toggle: "nodemailer" or "ses"
+EMAIL_SERVICE=sendgrid                    # Toggle: "nodemailer" or "sendgrid"
 
 AWS_S3_BUCKET_NAME=your-bucket-name
 AWS_S3_BUCKET_URL=https://<your-bucket-name.s3>.<region>.amazonaws.com
