segregate uplaod routes, reviews are dynamic

--- a/server/.env.example
+++ b/server/.env.example
@@ -23,3 +23,5 @@ STRIPE_SECRET_KEY=your_stripe_secret_key
 # Admin Credentials
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=password
+
+SUPPORT_EMAIL=support@example.com
