--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@sendgrid/mail": "^8.1.5",
     "aws-sdk": "^2.1692.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
