--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "resend": "^4.6.0",
     "stripe": "^17.7.0",
     "xlsx": "^0.18.5"
   }
