--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -156,6 +156,7 @@ jobs:
                 - EMAIL_USER=${EMAIL_USER}
                 - EMAIL_PASS=${EMAIL_PASS}
                 - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+                - RESEND_API_KEY=${RESEND_API_KEY}
                 - FROM_EMAIL=${FROM_EMAIL}
                 - WAITLIST_EMAIL=${WAITLIST_EMAIL}
                 - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
@@ -210,6 +211,7 @@ jobs:
           EMAIL_USER=${{ secrets.EMAIL_USER }}
           EMAIL_PASS=${{ secrets.EMAIL_PASS }}
           SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
+          RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}
           WAITLIST_EMAIL=${{ secrets.WAITLIST_EMAIL }}
           AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
