--- a/server/.env.example
+++ b/server/.env.example
@@ -1,18 +1,19 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/doctor_directory
 JWT_SECRET=your_jwt_secret
-EMAIL_PASS=your_email_password
+EMAIL_PASS=your_email_app_password_for_local_dev
 WAITLIST_EMAIL=recipient@example.com
 
 # sendgrid
 SENDGRID_API_KEY=Your SendGrid API key
+RESEND_API_KEY=your_resend_api_key
 EMAIL_USER=your_email@gmail.com
 
 # New variables for AWS SES
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region           
-EMAIL_SERVICE=sendgrid                
+EMAIL_SERVICE=resend           
 
 AWS_S3_BUCKET_NAME=your-bucket-name
 
@@ -23,5 +24,5 @@ STRIPE_SECRET_KEY=your_stripe_secret_key
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=password
 
+# ssl cert is sent to this email 
 SUPPORT_EMAIL=support@example.com
-RESEND_API_KEY=your_resend_api_key
