--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -162,7 +162,7 @@ jobs:
                 - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
                 - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
                 - AWS_REGION=${AWS_REGION}
-                - EMAIL_SERVICE=sendgrid
+                - EMAIL_SERVICE=${EMAIL_SERVICE}
                 - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
                 - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
                 - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
@@ -217,7 +217,7 @@ jobs:
           AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION=${{ secrets.AWS_REGION }}
-          EMAIL_SERVICE=sendgrid
+          EMAIL_SERVICE=${{ secrets.EMAIL_SERVICE }}
           AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }}
           STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
           STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }}
