--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/karla": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@stripe/react-stripe-js": "^3.3.0",
     "@stripe/stripe-js": "^5.9.2",
     "@tailwindcss/vite": "^4.0.8",
